# docs/swagger.yaml
@@ -42,6 +42,23 @@ info:
   title: Weatherman Telemetry Server APIs
   version: "1.0"
 paths:
+  /data/csv:
+    get:
+      description: Get a CSV formatted file of all the MQTT data
+      produces:
+      - text/csv
+      responses:
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/util.ErrorModel'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/util.ErrorModel'
+      summary: Get a CSV formatted file of all the MQTT data
+      tags:
+      - data
   /publish:
     post:
       description: Mock an MQTT weather publish, fields are formatted as Protobuf
@@ -60,10 +77,6 @@ paths:
             $ref: '#/definitions/api.publishModel'
         "400":
           description: Bad Request
-          schema:
-            $ref: '#/definitions/util.ErrorModel'
-        "500":
-          description: Internal Server Error
           schema:
             $ref: '#/definitions/util.ErrorModel'
       summary: Mock an MQTT weather publish
